footer, responsive layout, fixing overflow

--- a/index.css
+++ b/index.css
@@ -52,9 +52,7 @@ table {
 
 /******************************* LAYOUT HELPER COLOR *************************************/
 
-header {
 
-}
 nav {
   background-color: black;
 }
@@ -72,13 +70,10 @@ footer{
   background-color: yellowgreen;
 }
 
-.logo1 {
-  background-color: olive;
-  
-}
-.logo2 {
+.logo {
   background-color: olive;
 }
+
 
 
 /*****************************END OF LAYOUT HELPER COLOR ***********************************/
@@ -104,18 +99,24 @@ header {
 #main {
   display: grid;
   grid-template-columns: 5fr 2fr;
+  overflow: hidden;  
 }
+
 #newsfeed {
   display: grid;
-  grid-template-rows: 10fr 10fr 1fr;
+  grid-template-rows: 6fr 6fr 2fr;
+  overflow: hidden;
 }
+
 nav ul {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
 }
+
 #sidemenu {
   display: grid;
   grid-template-rows: 1fr 3fr;
+  overflow: hidden;
 }
 
 @media (min-width: 700px) {
@@ -124,17 +125,17 @@ nav ul {
   display: grid;
   grid-template-columns: 4fr 1fr;
    }
-}
-@media (max-width: 600px) {
-    .logo2, .logo1 {
-    display: none;
+  #newsfeed {
+    grid-template-rows: 6fr 6fr 1fr;
   }
 }
+
 @media (min-width: 1000px) {
   
   #main {
   display: grid;
   grid-template-columns: 6fr 1fr;
+
   }
 }
 
@@ -152,9 +153,9 @@ nav ul li {
   text-align: center;
 }
 .news {
-  overflow: hidden;
   border-top: solid 1px black; /* ÁTÁLLÍTANI DIZÁJNOSABBRA!! */
   margin-top: 5px;
+  overflow: hidden;
 }
 
 .news-first {
@@ -162,12 +163,11 @@ nav ul li {
 }
 
 .news img {
-  width: 150px;
-  height: 150px;
+  width: 90px;
+  height: 90px;
   padding: 10px;
   float: left;
 }
-
 .more {
   float: right;
   padding: 10px 10px 10px 0;
@@ -178,14 +178,19 @@ nav ul li {
   float: right;
   padding-right: 10px;
 }
+
 h1 {
   text-align: center;
-  padding: 10px 0;
+  padding: 12px 0;
+  font-weight: 700;
 }
-.news section p {
+.news section p {  /****** miért nem úszik be a kép alá? */
   padding: 5px;
+  height: 9vh;
+  overflow: hidden;
+  line-height: 20px;
+  display: none;
 }
-
 
 #shop a img {
   width: 100px;
@@ -196,3 +201,28 @@ h1 {
   transform: translate(-50%, -50%);
 }
 
+#morenews {
+  place-self: center;
+}
+
+footer {
+  font-size: 10px;
+}
+
+@media (min-height: 500px) {
+  .news section p {
+    display: grid;
+  }
+}
+
+@media (max-width: 600px) {
+    .logo2, .logo1 {
+    display: none;
+  }
+  } 
+@media (min-width: 700px) {
+    .news section p {
+    height: 20vh;
+  }
+}
+ 
